Better API documentation
